finish users docs (#655)
